--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
+  "homepage": "https://test.com",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
